logs/shadowdns.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shadowdns'...
Listing './lib/python3.5/site-packages/shadowdns-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/shadowsocks'...
Compiling './lib/python3.5/site-packages/shadowsocks/asyncdns.py'...
***   File "./lib/python3.5/site-packages/shadowsocks/asyncdns.py", line 438
    print error, address
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/shadowsocks/encrypt_salsa20.py'...
***   File "./lib/python3.5/site-packages/shadowsocks/encrypt_salsa20.py", line 112
    print 'salsa20 test start'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/shadowsocks/utils.py'...
***   File "./lib/python3.5/site-packages/shadowsocks/utils.py", line 34
    print 'Python 2.6 or 2.7 required'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/shadowsocks-2.0.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
